# txtviewer

./: .gitignore  CMakeLists.txt  Sqlmanager.cpp  Sqlmanager.h  bookshelf.cpp  bookshelf.h  bookshelf.ui  bookviewer.cpp  bookviewer.h  bookviewer.ui  bookviewermanager.cpp  bookviewermanager.h  main.cpp  setup.cpp  setup.h  setup.ui  translation.py  util.h
release/: setup.ini
